Finish JSON walkthrough, modify portfolio page with a button to display list of messages from the server

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -81,8 +81,8 @@
                 <li><a href="https://github.com/juliasliu">Github</a></li>
             </ul>
             <p><i>Alternatively, you can check out my actual portfolio website at <a href="http://julialiu.com/">www.julialiu.com</a></i>.</p>
-                <button onclick="addRandomGreeting()">Click Me</button>
-            <div id="greeting-container"></div>
+            <button onclick="getMessages()">Click me to get messages!</button>
+            <ul id="greeting-container"></ul>
         </div>
     </div>
   </body>
