Modify some styles for the comments

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -83,10 +83,11 @@
             <p><i>Alternatively, you can check out my actual portfolio website at <a href="http://julialiu.com/">www.julialiu.com</a></i>.</p>
         </div>
         <div class="content">
+            <h3>Comments:</h3>
             <ul id="comments-container"></ul>
             <form action="/data" method="POST">
 
-            <p>Leave your comment below:</p>
+            <p><strong>Leave your comment below:</strong></p>
             <p>What's your name?</p>
             <input type="text" name="name" placeholder="Your name here" />
             <br/>
