Create a Comment java class, change list elements to include the content and author of the Comment object

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -92,7 +92,7 @@
             <input type="text" name="name" placeholder="Your name here" />
             <br/>
             <p>What do you want to tell me?</p>
-            <textarea name="comment" placeholder="Your comment here"></textarea>
+            <textarea name="content" placeholder="Your comment here"></textarea>
             <br/><br/>
 
             <input type="submit" />
