--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -91,8 +91,9 @@
                 <option value="10">10</option>
                 <option value="0" selected>all</option>
             </select>
-
             <ul id="comments-container"></ul>
+            <button onClick="deleteComments()">Delete all comments</button>
+
             <form action="/data" method="POST">
 
             <p><strong>Leave your comment below:</strong></p>
