Finish implementing the Maps JavaScript API into portfolio as a Where's Waldo game

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -82,6 +82,10 @@
                 <li><a href="https://github.com/juliasliu">Github</a></li>
             </ul>
             <p><i>Alternatively, you can check out my actual portfolio website at <a href="http://julialiu.com/">www.julialiu.com</a></i>.</p>
+        </div>
+        <div class="transparent content">
+            <h3>Where's Waldo? Try to find and click on me in the map below:</h3>
+            <p id="hot-or-cold">Drag the map to find where I am!</p>
             <div id="map"></div>
         </div>
         <div class="content">
