Update instructions for Where's Waldo game

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -84,8 +84,9 @@
             <p><i>Alternatively, you can check out my actual portfolio website at <a href="http://julialiu.com/">www.julialiu.com</a></i>.</p>
         </div>
         <div class="transparent content">
-            <h3>Where's Waldo? Try to find and click on me in the map below:</h3>
-            <p id="hot-or-cold">Drag the map to find where I am!</p>
+            <h2>Where's Waldo?</h2>
+            <h3>Try to drag the map with your cursor to find Waldo and zoom out if needed. Click on Waldo if you find him!</h3>
+            <p id="hot-or-cold">Drag the map to find Waldo.</p>
             <div id="map"></div>
         </div>
         <div class="content">
