--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -101,9 +101,10 @@
             <ul id="comments-container"></ul>
             <button onClick="deleteComments()">Delete all comments</button>
 
-            <form action="/data" method="POST">
-
             <p><strong>Leave your comment below:</strong></p>
+
+            <form action="/data" method="POST" id="comments-form">
+
             <p>What's your name?</p>
             <input type="text" name="name" placeholder="Your name here" />
             <br/>
@@ -113,6 +114,10 @@
 
             <input type="submit" />
             </form>
+
+            <div id="login-message">
+                <p>Please login to publish a comment: <a href="" id="login-link"><button>Login</button></a></p>
+            </div>
         </div>
     </div>
   </body>
