Add logout button, fix bugs in comment updating after setting nickname

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -125,6 +125,10 @@
             <br/><br/>
             <input type="submit" />
             </form>
+
+            <div id="logout-message">
+                <p>Feel free to logout anytime: <a href="" id="logout-link"><button>Logout</button></a></p>
+            </div>
         </div>
     </div>
   </body>
