--- a/portfolio/src/main/webapp/comments.html
+++ b/portfolio/src/main/webapp/comments.html
@@ -8,7 +8,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTYkmfKWcCNvQQAGwztwAoU-wVS8kwIDo"></script>
     <script src="script.js"></script>
   </head>
-  <body onload="onloadHelper()">
+  <body onload="onloadHelper('comments')">
     <img class="background" />
     <nav class="navbar header">
         <ul class="navbar-left">
@@ -22,13 +22,7 @@
     </nav>
     <div class="content-container">
         <div class="main transparent content">
-            <h1>Fun Stuff</h1>
-        </div>
-        <div class="transparent content">
-            <h2>Where's Waldo?</h2>
-            <h3>Try to drag the map with your cursor to find Waldo and zoom out if needed. Click on Waldo if you find him!</h3>
-            <p id="hot-or-cold">Drag the map to find Waldo.</p>
-            <div id="map"></div>
+            <h1>Your Comments</h1>
         </div>
         <div class="transparent flex content">
             <div class="content-left">
