--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -8,7 +8,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTYkmfKWcCNvQQAGwztwAoU-wVS8kwIDo"></script>
     <script src="script.js"></script>
   </head>
-  <body onload="onloadHelper()">
+  <body onload="onloadHelper('projects')">
     <img class="background" />
     <nav class="navbar header">
         <ul class="navbar-left">
@@ -55,6 +55,12 @@
                     by generating their own cards, decks, and courses.</p>
                 </li>
             </ol>
+        </div>
+        <div class="transparent content">
+            <h2>Where's Waldo?</h2>
+            <h3>Try to drag the map with your cursor to find Waldo and zoom out if needed. Click on Waldo if you find him!</h3>
+            <p id="hot-or-cold">Drag the map to find Waldo.</p>
+            <div id="map"></div>
         </div>
     </div>
     <nav class="navbar footer">
